apps-helm/onepassword-connect/manifests/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onepassword-connect
  annotations:
    tailscale.com/proxy-group: heimdall
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - onepassword-connect
  defaultBackend:
    service:
      name: onepassword-connect
      port:
        number: 8080
  ingressClassName: tailscale
